--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = rpipicow
 framework = arduino
 board_build.core = earlephilhower
+board_build.filesystem_size = 0.5m
 lib_deps =
 	bodmer/TFT_eSPI@2.5.43
 	SPI
